# AzureDevopsDatabricks

./: README.md  databricks.yml  pyproject.toml
azure_pipelines/: demo-dev.yml
dab_templates/: demo_bundle.yaml
notebooks/bronze/: demo_bronze.py
notebooks/silver/: demo_silver.py
src/framework/common_functions/: metadata_functions.py
src/framework/utils/: metadata.yaml
